removing br and adding div around price options

--- a/app/views/products/_product_pricing_for_slice.html.haml
+++ b/app/views/products/_product_pricing_for_slice.html.haml
@@ -8,23 +8,23 @@
       %span.product-weight= "Weight: #{@product} <br />" unless @product.weight.blank?
       -if @product.weight
         %input.product-weight{:type=>"hidden", :value=>"#{@product.weight}"}
-      %br
-      - unless @product.product_options.empty?
-        -if !@product.product_options.reject{|x| !x.available}.empty?
-          = hidden_field_tag "product-price", number_to_currency(@product.product_options[0].price), {:class => "product-price"}
-          -if @product.product_options.count > 1
-            .options_box
-              - @product.product_options.each_with_index do |po, x|
-                -if po.available
-                  =radio_button_tag("product_options", po.id, x == 0 ? true : false, {:onclick => "option_switch(#{po.price}, \"#{po.title}\")"})
-                  =label_tag "product_options_#{po.id}", "#{po.title}&mdash;#{number_to_currency(po.price, :unit => "$")}"
-                  %br
-          -else
-            %span.product-price= number_to_currency(@product.product_options[0].price)
-          - if !@product.cart_code.blank?
-            = @product.cart_code
-          - elsif @cms_config["site_settings"]["google_merchant_id"] and @product.display_add_cart and !@product.product_options.reject{|po| po.price == "" }.empty?
-            %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0", :style => "position: relative;"}
+      .price-options
+        - unless @product.product_options.empty?
+          -if !@product.product_options.reject{|x| !x.available}.empty?
+            = hidden_field_tag "product-price", number_to_currency(@product.product_options[0].price), {:class => "product-price"}
+            -if @product.product_options.count > 1
+              .options_box
+                - @product.product_options.each_with_index do |po, x|
+                  -if po.available
+                    =radio_button_tag("product_options", po.id, x == 0 ? true : false, {:onclick => "option_switch(#{po.price}, \"#{po.title}\")"})
+                    =label_tag "product_options_#{po.id}", "#{po.title}&mdash;#{number_to_currency(po.price, :unit => "$")}"
+                    %br
+            -else
+              %span.product-price= number_to_currency(@product.product_options[0].price)
+            - if !@product.cart_code.blank?
+              = @product.cart_code
+            - elsif @cms_config["site_settings"]["google_merchant_id"] and @product.display_add_cart and !@product.product_options.reject{|po| po.price == "" }.empty?
+              %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0", :style => "position: relative;"}
 - elsif section.section_format == "cart_code"
   - if !@product.cart_code.blank?
     = @product.cart_code
@@ -38,16 +38,16 @@
       %span.product-weight= "Weight: #{@product} <br />" unless @product.weight.blank?
       -if @product.weight
         %input.product-weight{:type=>"hidden", :value=>"#{@product.weight}"}
-      %br
-      - unless @product.product_options.empty?
-        -if !@product.product_options.reject{|x| !x.available}.empty?
-          = hidden_field_tag "product-price", number_to_currency(@product.product_options[0].price), {:class => "product-price"}
-          -if @product.product_options.count > 1
-            .options_box
-              - @product.product_options.each_with_index do |po, x|
-                -if po.available
-                  =radio_button_tag("product_options", po.id, x == 0 ? true : false, {:onclick => "option_switch(#{po.price}, \"#{po.title}\")"})
-                  =label_tag "product_options_#{po.id}", "#{po.title}&mdash;#{number_to_currency(po.price, :unit => "$")}"
-                  %br
-          -else
-            %span.product-price= number_to_currency(@product.product_options[0].price)
+      .price-options
+        - unless @product.product_options.empty?
+          -if !@product.product_options.reject{|x| !x.available}.empty?
+            = hidden_field_tag "product-price", number_to_currency(@product.product_options[0].price), {:class => "product-price"}
+            -if @product.product_options.count > 1
+              .options_box
+                - @product.product_options.each_with_index do |po, x|
+                  -if po.available
+                    =radio_button_tag("product_options", po.id, x == 0 ? true : false, {:onclick => "option_switch(#{po.price}, \"#{po.title}\")"})
+                    =label_tag "product_options_#{po.id}", "#{po.title}&mdash;#{number_to_currency(po.price, :unit => "$")}"
+                    %br
+            -else
+              %span.product-price= number_to_currency(@product.product_options[0].price)
