--- a/app/views/products/_product_image_thumbs_for_slice.html.haml
+++ b/app/views/products/_product_image_thumbs_for_slice.html.haml
@@ -3,8 +3,5 @@
     .image
       .image-thumb-container
         .image-thumb
-          - unless (image.description.blank? and image.show_rating? and !image.video_url.blank?) or section.section_format == "fancy"
-            = link_to image_tag(image.thumbnail, :alt => h(image.title), :title => h(image.title)), [@product, image]
-          - else
-            = link_to image_tag(image.thumbnail, :alt => h(image.title), :title => h(image.title)), image.image.url(:large), :class => "fancy", :rel => "product", :title => h(image.title)
+          = link_to image_tag(image.thumbnail, :alt => h(image.title), :title => h(image.title)), image.image.url(:original)
 .clear
