removing inline float left from product category partial

--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -9,7 +9,7 @@
     = render :partial => "products/sidecolumn2"
   %h1= @productcategory.name
   = @productcategory.body
-  %div{:style => "float: left;"}
+  %div
     %ul.product-list
       -@products.each do |p|
         = render :partial => "/products/product", :locals => { :product => p }
