--- a/app/views/product_categories/_show.html.haml
+++ b/app/views/product_categories/_show.html.haml
@@ -1,6 +1,6 @@
 %h1= @productcategory.name
 = @productcategory.body
-%div{:style => "float: left;"}
+%div
   %ul.product-list
     -@products.each do |p|
       = render :partial => "/products/product", :locals => { :product => p }
