adding extended product to product partial

--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -1,4 +1,4 @@
-- if @cms_config["cms_settings"]["extended_product_details"]
+- if @cms_config["site_settings"]["extended_product_details"]
   %li.product
     - unless product.images.blank? 
       =link_to image_tag(product.images.first.thumbnail, :title => product.title, :alt => product.title), product, :class => "product-image"
