--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,4 +1,6 @@
-- content_for(:meta_title) { concat "Store" }
+- content_for(:meta_title) 
+  Store
+  = " - Page #{params[:page]}" if params[:page]
 / Add google cart here if needed
 -if @cms_config["site_settings"]["google_merchant_id"]
   /Add this line to the script tag to enable sandbox testing
