--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -1,5 +1,6 @@
 - content_for(:meta_title) do
   = @productcategory.name
+  = " - Page #{params[:page]}" if params[:page]
 - content_for(:meta_description) do
   = @productcategory.description
 - if !@cms_config['site_settings']['enable_responsive_layouts']
