--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,9 +1,9 @@
 - if @cms_config["modules"]["store"] or @cms_config["modules"]["products"]
-  - content_for(:meta_title) 
+  - content_for(:meta_title) do
     Store
     = " - Page #{params[:page]}" if params[:page]
-  - content_for :meta_description
-    = "A listing of products"
+  - content_for(:meta_description) do
+    A listing of products
     = " - Page #{params[:page]}" if params[:page]
   =# Add google cart here if needed
   - if @cms_config["site_settings"]["google_merchant_id"]
